manually merged 08d6bd8af789533c214abf64e6019e962f49a56f

--- a/SCSS/forget_password.scss
+++ b/SCSS/forget_password.scss
@@ -53,7 +53,7 @@
 }
 
 #footer-style{
-  bottom: auto;
+  //bottom: auto;
   background-color: #0277bd;
   height: 65px;/* Height of the footer */
 }
