--- a/SCSS/user_scss/_menu-bar.scss
+++ b/SCSS/user_scss/_menu-bar.scss
@@ -96,7 +96,7 @@
 .menu li ul li ul { left: 100%; }
 .menu li ul li:hover > ul { top: -4px; }
 .menu li ul li:hover { z-index: 5001; }
-.menu li.submenu > a:after { content: ' ▾';} // fix this
+.menu li.submenu > a:after { content: ' o';}
 
 
 .mega_menu {
